--- a/_sass/_people.scss
+++ b/_sass/_people.scss
@@ -3,7 +3,7 @@
 .people-section,
 .collaborators-section,
 .alumni-section {
-    padding: $space-16 0;
+    padding: $space-4 0 $space-16;
 }
 
 .people-section {
