--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -1,7 +1,7 @@
 // Publications Section
 
 .publications-section {
-    padding: $space-16 0;
+    padding: $space-4 0 $space-16;
 }
 
 .pub-list {
