--- a/_sass/_research.scss
+++ b/_sass/_research.scss
@@ -1,7 +1,7 @@
 // Research Section
 
 .research-topic {
-    padding: $space-16 0;
+    padding: $space-4 0 $space-16;
 
     &.alt {
         background: $color-background-alt;
