--- a/_sass/_resources.scss
+++ b/_sass/_resources.scss
@@ -1,7 +1,7 @@
 // Resources Section
 
 .resources-section {
-    padding: $space-16 0;
+    padding: $space-4 0 $space-16;
 }
 
 .resource-group {
